--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>
-            Why I'm doing this?
+        <h1 id="first">
+            Hello there!
         </h1>
     </div>
     
