Styling of the title
Made a styling to the title of the gallery. imported the font from Google.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Just A Weird Gallery :D</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- a galery of the wild life or domestic animals' photos in weird poses -->
     <div class="container">
         <h1 id="first">
-            Hello there!
+            Just A Weird Gallery :D
         </h1>
     </div>
     
