added images and styled divs
I added some images and classes to my divs. I added extra style to them.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <!-- a galery of the wild life or domestic animals' photos in weird poses -->
-    <div class="container">
+    <div class="container full-width">
         <h1 id="first">
             Just A Weird Gallery :D
         </h1>
     </div>
-    
+    <div class="container full-width img">
+        <img src="/img/pixelated-cat.jpeg" alt="Tabby cat sitting behind a door made of glass squares. The glass deforms the shape of the cat and it looks like being pixelated.">
+    </div>
 </body>
 </html>
