--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
     <div class="container full-width img">
         <img src="/img/pixelated-cat.jpeg" alt="Tabby cat sitting behind a door made of glass squares. The glass deforms the shape of the cat and it looks like being pixelated.">
     </div>
+    <div id="gallery" class="container">
+        <div class="container flex-row card">
+            <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp">
+            <p>bla</p>
+        </div>
+        <div class="container flex-row card">
+            <img src="/img/funny-jumping-cat-animals-qntxzevgazp0ph0l.jpg">
+            <p></p>
+        </div>
+        <div class="container flex-row card">
+            <img src="/img/salmon-dc4c7fc6b545214e37d7f581e6841ea3e786fb8c.jpg">
+            <p></p>
+        </div>
+    </div>
 </body>
 </html>
