--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Just A Weird Gallery :D</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container flex-col">
     <!-- a galery of the wild life or domestic animals' photos in weird poses -->
     <div class="container full-width">
         <h1 id="first">
@@ -16,18 +16,22 @@
     <div class="container full-width img">
         <img src="/img/pixelated-cat.jpeg" alt="Tabby cat sitting behind a door made of glass squares. The glass deforms the shape of the cat and it looks like being pixelated.">
     </div>
-    <div id="gallery" class="container">
-        <div class="container flex-row card">
+    <div id="gallery-div" class="">
+        <div id="item1" class="container flex-col card">
             <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp">
             <p>bla</p>
         </div>
-        <div class="container flex-row card">
+        <div id="item2" class="container flex-col card">
             <img src="/img/funny-jumping-cat-animals-qntxzevgazp0ph0l.jpg">
-            <p></p>
+            <p>bla</p>
         </div>
-        <div class="container flex-row card">
+        <div id="item3" class="container flex-col card">
             <img src="/img/salmon-dc4c7fc6b545214e37d7f581e6841ea3e786fb8c.jpg">
-            <p></p>
+            <p>bla</p>
+        </div>
+        <div id="item4" class="container flex-col card">
+            <img src="/img/red-fox.jpg">
+            <p>bla</p>
         </div>
     </div>
 </body>
