--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             Just A Weird Gallery :D
         </h1>
     </div>
-    <div class="container full-width img">
+    <div id="cover-img" class="container full-width img">
         <img src="/img/pixelated-cat.jpeg" alt="Tabby cat sitting behind a door made of glass squares. The glass deforms the shape of the cat and it looks like being pixelated.">
     </div>
-    <div id="gallery-div" class="">
+    <div id="gallery-div">
         <div id="item1" class="container flex-col card">
             <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp">
             <p>bla</p>
