styling + hover effect + gallery + description
I changed the styling, added a gradient from top to bottom and a text colour. Hover effect was added to a link. I replaced random gallery photos with the winners' photos of Comedy Wildlife Photography Awards from various years, I added the description to each image and a link to the official website.

--- a/index.html
+++ b/index.html
@@ -3,35 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just A Weird Gallery :D</title>
+    <title>Weird Gallery of Comedy Wildlife Photography Awards</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container flex-col">
     <!-- a galery of the wild life or domestic animals' photos in weird poses -->
     <div class="container full-width">
-        <h1 id="first">
-            Just A Weird Gallery :D
-        </h1>
+        <div class="first">
+            <h1 id="title" class="title-font">
+                Weird Gallery
+            </h1>
+            <h3 id="title-add" class="title-font">
+                of Comedy Wildlife Photography Awards
+            </h3>
+        </div>
     </div>
+    <!-- cover image -->
     <div id="cover-img" class="container full-width img">
-        <img src="/img/pixelated-cat.jpeg" alt="Tabby cat sitting behind a door made of glass squares. The glass deforms the shape of the cat and it looks like being pixelated.">
+        <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp" alt="A red squirel is holding it's paws up like trying to stop something">
     </div>
+    <!-- About Comedy Wildlife Photography Awards -->
+    <div id="wildlife-link" class="container">
+        <h3 id="wildlife-link-text">
+            Comedy Wildlife Photography Awards is a free competition open to all wildlife photography novices, amateurs and proffesionals and celebrates the hilarity of our natural world. The gallery presents winners ove the years: 2021, 2022 and 2023 and a few extra funny images of other comperitors.
+            <a id="wildlife-link-btn" href="https://www.comedywildlifephoto.com/" target="_blank">Find Out More...</a>
+        </h3>
+        <p></p>
+    </div>
+    <!-- gallery photos of 2021 winners + extras & description -->
     <div id="gallery-div">
         <div id="item1" class="container flex-col card">
-            <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp">
-            <p>bla</p>
+            <img src="/img/ken-jensen_ouch.jpg">
+            <p>2021 overall winner. The photograph shows a golden silk monkey in Yunnan Cina. The autor of the image is Ken Jansen</p>
         </div>
         <div id="item2" class="container flex-col card">
-            <img src="/img/funny-jumping-cat-animals-qntxzevgazp0ph0l.jpg">
-            <p>bla</p>
+            <img src="/img/john-speirs_i-guess-summers-over.jpg">
+            <p>This photograph is the Spectrum Photo Creatures in the Air Award 2021 and it shows a pigeon "attacked" by autumn leave. the author of this image is John Speirs</p>
         </div>
         <div id="item3" class="container flex-col card">
-            <img src="/img/salmon-dc4c7fc6b545214e37d7f581e6841ea3e786fb8c.jpg">
-            <p>bla</p>
+            <img src="/img/overall-winner-land-category-winner_jennifer-hadley_not-so-cat-like-reflexes.jpg">
+            <p>2022 overall winner was Jennifer Hadley with a photograph of a 3 month old cub which tried to get down off the tree but a poor animal had a bad reflex.</p>
         </div>
         <div id="item4" class="container flex-col card">
-            <img src="/img/red-fox.jpg">
-            <p>bla</p>
+            <img src="/img/winner-of-air-award_jean-jacques-alcalay_misleading-african-viewpoints.jpg">
+            <p>2022 Spectrum Photo Creatures in the Air winner, Jean Jacques Alcalay. The image shows a hippo yawning next to a heron standing on the back of another hippo.</p>
         </div>
     </div>
 </body>
