--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             <img src="/img/winner-of-air-award_jean-jacques-alcalay_misleading-african-viewpoints.jpg">
             <p>2022 Spectrum Photo Creatures in the Air winner, Jean Jacques Alcalay. The image shows a hippo yawning next to a heron standing on the back of another hippo.</p>
         </div>
+        <div id="item5" class="container flex-col card">
+            <img src="/img/1_over-all-winner-and-creatures-of-the-land-winner_jason-moore_air-guitar-roo.jpg">
+            <p>2023 owerall winner Jason Moore with the photograph of a Western Grey Kangoroo in an open field with yellow flowers. The kangoroo took a funny pose that looks like he is playing an air guitar.</p>
+        </div>
+        <div id="item6" class="container flex-col card">
+            <img src="/img/2_underwater-category-winner_otter-kwek_otter-ballerina.jpg">
+            <p>2023 Creatures Under the Sea Award winner Otter Kwek. The photograph shows an otter ballerina gracefully dances in an Arabasque position.</p>
+        </div>
     </div>
 </body>
 </html>
