1 gradient, 2 curved elements
I added an extra div to the bottom, some gradient for two curved elements (one to the top, one to the bottom).

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- cover image -->
     <div id="cover-img" class="container full-width img">
         <img src="/img/comedy-wildlife-awards-squirel-stop.jpg.webp" alt="A red squirel is holding it's paws up like trying to stop something">
+        <div id="gradient"></div>
     </div>
     <!-- About Comedy Wildlife Photography Awards -->
     <div id="wildlife-link" class="container">
@@ -28,7 +29,6 @@
             Comedy Wildlife Photography Awards is a free competition open to all wildlife photography novices, amateurs and proffesionals and celebrates the hilarity of our natural world. The gallery presents winners ove the years: 2021, 2022 and 2023 and a few extra funny images of other comperitors.
             <a id="wildlife-link-btn" href="https://www.comedywildlifephoto.com/" target="_blank">Find Out More...</a>
         </h3>
-        <p></p>
     </div>
     <!-- gallery photos of 2021 winners + extras & description -->
     <div id="gallery-div">
@@ -55,6 +55,11 @@
         <div id="item6" class="container flex-col card">
             <img src="/img/2_underwater-category-winner_otter-kwek_otter-ballerina.jpg">
             <p>2023 Creatures Under the Sea Award winner Otter Kwek. The photograph shows an otter ballerina gracefully dances in an Arabasque position.</p>
+        </div>
+    </div>
+    <div id="outer">
+        <div id="curved" class="container full-width">
+            <p>made by Luxana</p>
         </div>
     </div>
 </body>
