--- a/index.html
+++ b/index.html
@@ -56,6 +56,33 @@
             <img src="/img/2_underwater-category-winner_otter-kwek_otter-ballerina.jpg">
             <p>2023 Creatures Under the Sea Award winner Otter Kwek. The photograph shows an otter ballerina gracefully dances in an Arabasque position.</p>
         </div>
+
+        <h2>Selected 2024 Finalist gallery</h2>
+        <div id="item7" class="container flex-col card">
+            <img src="/img/bird-landing-fail.png">
+            <p>Damyan Petkov with “Whiskered Tern crash on landing”</p>
+        </div>
+        <div id="item8" class="container flex-col card">
+            <img src="/img/cuddling-bears.png">
+            <p>Andrea Rosado with “In love”</p>
+        </div>
+        <div id="item9" class="container flex-col card">
+            <img src="/img/funny-ant.png">
+            <p>Alexander Pansier with “Hello World”</p>
+        </div>
+        <div id="item10" class="container flex-col card">
+            <img src="/img/funny-fish.png">
+            <p>Alexander Fine with “Peekaboo”</p>
+        </div>
+        <div id="item11" class="container flex-col card">
+            <img src="/img/racoon-telling-a-secret.png">
+            <p>Jan Piecha with “I'll tell you a secret”</p>
+        </div>
+        <div id="item12" class="container flex-col card">
+            <img src="/img/smiling-fish.png">
+            <p>Wim Bellemans with “Parrot fish likes to be washed”</p>
+        </div>
+        <h4>See more at<a id="wildlife-link-btn" href="https://www.comedywildlifephoto.com/gallery/finalists/2024_finalists.php" target="_blank">Gallery of Winners and Finalists 2024 Finalists</a></h4>
     </div>
     <div id="outer">
         <div id="curved" class="container full-width">
