--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="wildlife-link" class="container">
         <h3 id="wildlife-link-text">
             Comedy Wildlife Photography Awards is a free competition open to all wildlife photography novices, amateurs and proffesionals and celebrates the hilarity of our natural world. The gallery presents winners ove the years: 2021, 2022 and 2023 and a few extra funny images of other comperitors.
-            <a id="wildlife-link-btn" href="https://www.comedywildlifephoto.com/" target="_blank">Find Out More...</a>
+            <a class="wildlife-link-btn" href="https://www.comedywildlifephoto.com/" target="_blank">Find Out More...</a>
         </h3>
     </div>
     <!-- gallery photos of 2021 winners + extras & description -->
@@ -56,8 +56,12 @@
             <img src="/img/2_underwater-category-winner_otter-kwek_otter-ballerina.jpg">
             <p>2023 Creatures Under the Sea Award winner Otter Kwek. The photograph shows an otter ballerina gracefully dances in an Arabasque position.</p>
         </div>
-
+    </div>
+    <!-- 2024 finalists gallery -->
+    <div id="title2" class="container full-width title-font">
         <h2>Selected 2024 Finalist gallery</h2>
+    </div>
+    <div id="gallery-div2">
         <div id="item7" class="container flex-col card">
             <img src="/img/bird-landing-fail.png">
             <p>Damyan Petkov with “Whiskered Tern crash on landing”</p>
@@ -82,7 +86,9 @@
             <img src="/img/smiling-fish.png">
             <p>Wim Bellemans with “Parrot fish likes to be washed”</p>
         </div>
-        <h4>See more at<a id="wildlife-link-btn" href="https://www.comedywildlifephoto.com/gallery/finalists/2024_finalists.php" target="_blank">Gallery of Winners and Finalists 2024 Finalists</a></h4>
+    </div>
+    <div class="container full-width">
+        <h4>See more at:<a id="btn-margin" class="wildlife-link-btn" href="https://www.comedywildlifephoto.com/gallery/finalists/2024_finalists.php" target="_blank">Gallery of Winners and Finalists 2024 Finalists</a></h4>
     </div>
     <div id="outer">
         <div id="curved" class="container full-width">
